GNOME Bugzilla – Bug 750339
Ctrl+W doesn't work
Last modified: 2015-12-04 10:49:38 UTC
Pretty much all Gnome applications implement Ctrl+W as means to close current window. Totem doesn't implement it (Ctrl+W shortcut is actually part of the Gnome HIG) https://developer.gnome.org/hig/stable/keyboard-input.html.en#file Although the Ctrl+Q works, it would be nice if Ctrl+W worked too. Currently Totem is a single-window application, so it would do the same thing.
Fixed in master, thanks.