main: Add Ctrl+W shortcut to exit

https://bugzilla.gnome.org/show_bug.cgi?id=750339