src/totem-object.c
@@ -3322,6 +3322,13 @@ totem_object_handle_key_press (TotemObject *totem, GdkEventKey *event)
 	case GDK_KEY_AudioStop:
 		totem_object_pause (totem);
 		break;
+	case GDK_KEY_w:
+	case GDK_KEY_W:
+		if (mask == GDK_CONTROL_MASK)
+			totem_object_exit (totem);
+		else
+			retval = FALSE;
+		break;
 	case GDK_KEY_q:
 	case GDK_KEY_Q:
 		totem_object_exit (totem);
@@ -3541,6 +3548,8 @@ window_key_press_event_cb (GtkWidget *win, GdkEventKey *event, TotemObject *tote
 		case GDK_KEY_l:
 		case GDK_KEY_q:
 		case GDK_KEY_Q:
+		case GDK_KEY_w:
+		case GDK_KEY_W:
 		case GDK_KEY_Right:
 		case GDK_KEY_Left:
 		case GDK_KEY_plus:
